# storygrabber

./: .env.example  .gitignore  Dockerfile  README.md  authors.json  compose.yaml  docker-compose.yml  entrypoint.sh  notebook.ipynb  pyproject.toml  remove_empty_authors.py  test_import_fail.json  test_import_single.json
.github/workflows/: docker-image.yml
cache/storygraph/: 0xchloe.json
storygrab/: app.py  backend.py  routes.py  wsgi.py
storygrab/modules/: lazylibrarian.py  storygraph.py
storygrab/static/: get_books_widget.js  match_books_widget.js  styles.css
storygrab/templates/: base.html.j2  dashboard.html.j2  home.html.j2  settings.html.j2
storygrabber/: __init__.py  api.py  app.py  lazylibrarian.py  main.py  oldapi.py  readarr.py  routes.py  test.py  todo.md  unpause_authors.py
storygrabber/modules/: __init__.py  audiobookshelf.py  lazylibrarian.py  storygraph.py  util.py
storygrabber/static/: get_books_widget.js  match_books_widget.js
storygrabber/static/css/: styles.css
storygrabber/templates/: base.html.j2  dashboard.html.j2  home.html.j2
tests/: test_app.py  test_get_books_cache.py  test_ll_actions.py  test_match_books_api.py  test_match_books_with_library.py  test_storygraph.py
tmp_cache_dir/: myuser.json
