[tool.poetry]
name = "storygrabber"
version = "0.1.0"
description = ""
authors = ["0xChloe <chloe@catastrophesoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.31.0"
httpx = "^0.28.1"
beautifulsoup4 = "^4.13.3"
webdriver-manager = "^4.0.2"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
storygrabber = "storygrabber.main:main_cli"
storygrabber-dump-books = "storygrabber.main:dump_books_to_file"
storygrabber-import-books = "storygrabber.main:import_books_from_file"
storygrabber-unqueue-wanted = "storygrabber.main:unqueue_wanted_books"
